--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
         "@material-ui/icons": "^4.11.3",
-        "@mui/material": "^5.6.3",
+        "@mui/material": "^5.7.0",
+        "@mui/styles": "^5.7.0",
         "react-router-dom": "^6.3.0"
     }
 }
