--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 asgiref==3.5.1
+autopep8==1.6.0
 backports.zoneinfo==0.2.1
-django==4.0.4
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+Django==4.0.4
 djangorestframework==3.13.1
+idna==3.3
+pycodestyle==2.8.0
 pytz==2022.1
+requests==2.27.1
 sqlparse==0.4.2
+toml==0.10.2
+urllib3==1.26.9
