--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==4.0.4
 djangorestframework==3.13.1
 idna==3.3
 pycodestyle==2.8.0
+python-dotenv==0.20.0
 pytz==2022.1
 requests==2.27.1
 sqlparse==0.4.2
